@@ -108,6 +108,16 @@ name|java
 operator|.
 name|io
 operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|io
+operator|.
 name|Reader
 import|;
 end_import
@@ -397,16 +407,16 @@ operator|new
 name|HashSet
 argument_list|()
 decl_stmt|;
-DECL|field|_stemdict
+DECL|field|stemdict
 specifier|private
 name|Map
-name|_stemdict
+name|stemdict
 init|=
 operator|new
 name|HashMap
 argument_list|()
 decl_stmt|;
-comment|/**    * Builds an analyzer with the default stop words ({@link #DUTCH_STOP_WORDS}).    */
+comment|/**    * Builds an analyzer with the default stop words ({@link #DUTCH_STOP_WORDS})     * and a few default entries for the stem exclusion table.    *     */
 DECL|method|DutchAnalyzer
 specifier|public
 name|DutchAnalyzer
@@ -421,7 +431,7 @@ argument_list|(
 name|DUTCH_STOP_WORDS
 argument_list|)
 expr_stmt|;
-name|_stemdict
+name|stemdict
 operator|.
 name|put
 argument_list|(
@@ -431,7 +441,7 @@ literal|"fiets"
 argument_list|)
 expr_stmt|;
 comment|//otherwise fiet
-name|_stemdict
+name|stemdict
 operator|.
 name|put
 argument_list|(
@@ -441,7 +451,7 @@ literal|"bromfiets"
 argument_list|)
 expr_stmt|;
 comment|//otherwise bromfiet
-name|_stemdict
+name|stemdict
 operator|.
 name|put
 argument_list|(
@@ -450,7 +460,7 @@ argument_list|,
 literal|"eier"
 argument_list|)
 expr_stmt|;
-name|_stemdict
+name|stemdict
 operator|.
 name|put
 argument_list|(
@@ -503,22 +513,41 @@ name|File
 name|stopwords
 parameter_list|)
 block|{
+try|try
+block|{
 name|stoptable
 operator|=
-operator|new
-name|HashSet
-argument_list|(
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|WordlistLoader
 operator|.
-name|getWordtable
+name|getWordSet
 argument_list|(
 name|stopwords
 argument_list|)
-operator|.
-name|keySet
-argument_list|()
-argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+comment|// TODO: throw IOException
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 block|}
 comment|/**    * Builds an exclusionlist from an array of Strings.    *    * @param exclusionlist    */
 DECL|method|setStemExclusionTable
@@ -566,42 +595,87 @@ name|File
 name|exclusionlist
 parameter_list|)
 block|{
+try|try
+block|{
 name|excltable
 operator|=
-operator|new
-name|HashSet
-argument_list|(
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|WordlistLoader
 operator|.
-name|getWordtable
+name|getWordSet
 argument_list|(
 name|exclusionlist
 argument_list|)
-operator|.
-name|keySet
-argument_list|()
-argument_list|)
 expr_stmt|;
 block|}
-comment|/**    * Reads a stemdictionary file , that overrules the stemming algorithm    * This is a textfile that contains per line    * word\tstem    * i.e: tabseperated    */
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+comment|// TODO: throw IOException
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
+block|}
+comment|/**    * Reads a stemdictionary file , that overrules the stemming algorithm    * This is a textfile that contains per line    *<tt>word<b>\t</b>stem</tt>, i.e: two tab seperated words    */
 DECL|method|setStemDictionary
 specifier|public
 name|void
 name|setStemDictionary
 parameter_list|(
 name|File
-name|stemdict
+name|stemdictFile
 parameter_list|)
 block|{
-name|_stemdict
+try|try
+block|{
+name|stemdict
 operator|=
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|WordlistLoader
 operator|.
 name|getStemDict
 argument_list|(
-name|stemdict
+name|stemdictFile
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|e
+parameter_list|)
+block|{
+comment|// TODO: throw IOException
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
+block|}
 block|}
 comment|/**    * Creates a TokenStream which tokenizes all the text in the provided TextReader.    *    * @return A TokenStream build from a StandardTokenizer filtered with StandardFilter,    * StopFilter, DutchStemFilter    */
 DECL|method|tokenStream
@@ -652,7 +726,7 @@ name|result
 argument_list|,
 name|excltable
 argument_list|,
-name|_stemdict
+name|stemdict
 argument_list|)
 expr_stmt|;
 return|return
